--- a/puphpet/config.yaml
+++ b/puphpet/config.yaml
@@ -3,7 +3,7 @@ vagrantfile:
     vm:
         box: puphpet/debian75-x64
         box_url: puphpet/debian75-x64
-        hostname: local.puphpet
+        hostname: corvus.puphpet
         memory: '512'
         cpus: '1'
         chosen_provider: virtualbox
@@ -35,7 +35,7 @@ vagrantfile:
         synced_folder:
             vflsf_or38nuyxubu8:
                 source: ./
-                target: /var/www/nfqakademija
+                target: /var/www/corvus
                 sync_type: nfs
                 smb:
                     smb_host: ''
@@ -159,10 +159,10 @@ apache:
         - rewrite
     vhosts:
         av_6upso1vlmf7v:
-            servername: nfqakademija.dev
+            servername: corvus.dev
             serveraliases:
-                - www.nfqakademija.dev
-            docroot: /var/www/nfqakademija/web
+                - www.corvus.dev
+            docroot: /var/www/corvus/web
             port: '80'
             setenv:
                 - 'APP_ENV dev'
@@ -176,7 +176,7 @@ apache:
             ssl_cipher: ''
             directories:
                 avd_j5oy6ogmgp55:
-                    path: /var/www/nfqakademija/web
+                    path: /var/www/corvus/web
                     options:
                         - Indexes
                         - FollowSymlinks
