Tide up routes. Min password length increased up to 6. Now then user enters url corvus.dev he can get login page or dashboard. It depends if user is logged in - then it will show dashboard. If not logeed in - then it will show login page.

--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -30,7 +30,7 @@ framework:
         handler_id:  ~
     fragments:       ~
     http_method_override: true
-    default_locale: en
+    translator: { fallbacks: [en] }
 
 # Twig Configuration
 twig:
