--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -1,12 +1,18 @@
+
+
 corvus_main:
-    resource: "@CorvusMainBundle/Controller/"
-    type:     annotation
-    prefix:   /
+    path:     /
+    defaults: { _controller: CorvusMainBundle:Default:index }
 
 login:
     path:     /login
     defaults: { _controller: CorvusMainBundle:Default:welcome }
     methods:  [GET, POST]
 
+dashboard:
+     path:     /dashboard
+     defaults: { _controller: CorvusMainBundle:Default:dashboard }
+
 fos_user:
     resource: "@FOSUserBundle/Resources/config/routing/all.xml"
+
