--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -14,7 +14,7 @@ security:
         in_memory:
             memory: ~
         fos_userbundle:
-            id: fos_user.user_provider.username
+            id: fos_user.user_provider.username_email
 
     firewalls:
         # disables authentication for assets and the profiler, adapt it according to your needs
@@ -40,6 +40,7 @@ security:
             anonymous:    true
 
     access_control:
+        - { path: ^/dashboard, role: ROLE_USER }
         - { path: ^/login$, role: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: ^/register, role: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: ^/resetting, role: IS_AUTHENTICATED_ANONYMOUSLY }
