Revert "Merge branch 'loginfeature' into develop"
This reverts commit be818bf8ebbc3e3751131c789e789cb4aa7fc2ac, reversing
changes made to 195d1feaaf8e25e35e164229a7acca386cab536c.

Conflicts:
	.gitignore
	.idea/workspace.xml
	README.md

--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -1,4 +1,3 @@
-
 food:
     resource: "@FoodBundle/Controller/"
     type:     annotation
@@ -14,17 +13,7 @@ dashboard:
     type:     annotation
     prefix:   /
 
-
 corvus_main:
-    path:     /
-    defaults: { _controller: CorvusMainBundle:Default:index }
-
-login:
-    path:     /login
-    defaults: { _controller: CorvusMainBundle:Default:welcome }
-    methods:  [GET, POST]
-
-
-fos_user:
-    resource: "@FOSUserBundle/Resources/config/routing/all.xml"
-
+    resource: "@CorvusMainBundle/Controller/"
+    type:     annotation
+    prefix:   /
