--- a/app/config/services.yml
+++ b/app/config/services.yml
@@ -7,3 +7,9 @@ services:
 #    service_name:
 #        class: AppBundle\Directory\ClassName
 #        arguments: ["@another_service_name", "plain_value", "%parameter_name%"]
+
+    corvus_user.registration_completed:
+        class: Corvus\UserBundle\EventListener\RegistrationCompleted
+        arguments: [@doctrine]
+        tags:
+          - {name: kernel.event_subscriber}
