--- a/composer.json
+++ b/composer.json
@@ -17,12 +17,12 @@
         "sensio/distribution-bundle": "~4.0",
         "sensio/framework-extra-bundle": "^3.0.2",
         "incenteev/composer-parameter-handler": "~2.0",
-        "friendsofsymfony/user-bundle": "~2.0@dev"
+        "friendsofsymfony/user-bundle": "~2.0@dev",
+        "doctrine/doctrine-fixtures-bundle": "^2.3"
     },
     "require-dev": {
         "sensio/generator-bundle": "~2.3",
-        "phpunit/phpunit": "^5.0",
-        "doctrine/doctrine-fixtures-bundle": "^2.3"
+        "phpunit/phpunit": "^5.0"
     },
     "scripts": {
         "post-install-cmd": [
