--- a/app/config/config_dev.yml
+++ b/app/config/config_dev.yml
@@ -44,5 +44,8 @@ monolog:
 assetic:
     use_controller: true
 
-#swiftmailer:
-#    delivery_address: me@example.com
+swiftmailer:
+  transport: gmail
+  username: corvusfood
+  password: corvusfoodcorvusfood
+
